# iec62443-multitenant-blindspot-check

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  PUSH-READY.md  README.md  pyproject.toml  reproduce-table3.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  test.yml
blindspotcheck/: __init__.py  __main__.py  cli.py  evaluator.py  output.py  schema.py
blindspotcheck/schemas/: architecture-v1.json
docs/: design.md  yaml-schema.md
examples/: airport-common-use-terminal.yaml  maritime-container-terminal.yaml  rail-passenger-station.yaml
tests/: test_adversarial.py  test_evaluator.py  test_parity.py  test_samples.py  test_schema.py
tests/web/: dump_schema.mjs  run_evaluator.mjs  run_yaml_export.mjs  test_evaluator.mjs  test_history.mjs  test_persistence.mjs  test_serialize.mjs  test_templates.mjs  test_yaml_export.mjs
web/: app.js  canvas.js  chips.js  evaluator.js  history.js  index.html  owner-colors.js  package.json  persistence.js  schema-validator.js  schema.js  serialize.js  styles.css  templates.js  ui.js  yaml-export.js
